src/tests/testfiles/variable-declarations/12.txt
Error at 2:7: Variable initialization must have the same type (have char * [] and char [])
char *str[] = "hello i am string";
     ^
